# homebrew-dotsync

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
Formula/: dotsync.rb
docs/: adding-an-app.md
lib/dotsync/: __main__.py  backup.py  cli.py  config.py  plan.py  shellrc.py  ui.py  ui_picker.py  welcome.py
local_dev/: README.md  __init__.py
local_dev/serena_mcp_management/: TUI_MESSAGES.md  __init__.py  serena_agent_launcher.py  serena_zsh_shim.py  ui.py
local_dev/tests/: test_launcher_phases.py  test_launcher_regression.py  test_serena_health.py  test_serena_launcher.py  test_serena_packaging.py  test_serena_paths.py  test_serena_registry.py  test_serena_server.py  test_serena_watchdog.py  test_serena_zsh_shim.py  test_ui_progress.py  test_ui_prompts.py  test_ui_renderer.py  test_ui_state.py  test_ui_style.py
scripts/: demo.sh  release.sh
tests/: conftest.py  test_backup.py  test_cli.py  test_cli_apps_status.py  test_cli_config.py  test_cli_init.py  test_cli_sync.py  test_config.py  test_shellrc.py  test_sync_plan.py  test_ui.py  test_ui_picker.py  test_welcome.py
tests/apps/: test_base.py  test_bettertouchtool.py  test_claude.py  test_codex.py  test_ghostty.py  test_mcp_sanitizer.py  test_registry.py  test_zsh.py
tests/integration/: test_roundtrip.py
tests/tools/: test_serena_health.py  test_serena_launcher.py  test_serena_packaging.py  test_serena_paths.py  test_serena_registry.py  test_serena_server.py  (+3 more)
tools/: __init__.py  install_serena_agent_wrappers.py  serena_agent_launcher.py  serena_zsh_shim.py
(+23 files in other folders)
