[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dotsync"
version = "0.1.6"
description = "Sync app configs with a local folder"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "changja88" }]

[project.scripts]
dotsync = "dotsync.cli:main"

[tool.setuptools.packages.find]
where = ["lib"]

[tool.pytest.ini_options]
pythonpath = ["lib"]
testpaths = ["tests"]
